--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ruba la caramella al mostro!</title>
+        <title>Ruba la caramella al mostro altrimenti sei fritto!</title>
         <style>
             img {
                 width: 40%;
@@ -19,8 +19,8 @@
         <audio id="roar">
             <source src="roar.ogg" type="audio/ogg">
         </audio>
-        <img id="monster" src="blue-monster.jpg">
-        <img id="candy" src="candy.jpg">
+        <img id="mostro" src="mostro.jpg">
+        <img id="caramella" src="caramella.jpg">
         <script>
             var roar = document.getElementById("roar");
             roar.onended = function(e) {
