--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <audio id="roar">
             <source src="roar.ogg" type="audio/ogg">
         </audio>
-        <img id="mostro" src="mostro.jpg">
+        <img id="mostro" src="mostropolifemo.png">
         <img id="caramella" src="caramella.jpg">
         <script>
             var roar = document.getElementById("roar");
